
name:                   lilypond-parse
version:                0.0.1
author:                 Edward Lilley
maintainer:             Edward Lilley <ejlilley@gmail.com>
license:                BSD3
license-file:           COPYING
synopsis:               Parser for Lilypond
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    This package contains a Parsec parser for the Lilypond music typesetting language.

source-repository head
    type:               git
    location:           git://github.com/ejlilley/lilypond-parse.git


library
    build-depends:      base                    >= 4 && < 5,

    exposed-modules:    Data.Music.Lilypond.Parse
    hs-source-dirs:     src
    default-language:   Haskell2010
